NEXT:
 * a serious bug in the hashcache was fixed. The buildid calculation
   used outdated hash of files from the project tree.

e2factory-2.3.4pre3
 * the plugin interface was extended to allow plugins to change the
   way dependencies are processed into the build order
 * bugs were fixed

e2factory-2.3.4pre2
 * compressed build log is stored within the result packages
 * bugs were fixed

e2factory-2.3.4pre1
 * a plugin interface was introduced. Local code is capable of loading
   plugins and some initial interfaces are available with this release.
 * the environment related code was rewritten in a far more robust way.
   This fixes a few bugs: Missing environment files were silently ignored,
   and adding result specific environment could change the id of the
   global environment (not the environment itself) due to lua table behaviour.
 * the cache module was turned into a true lua module.
 * a design flaw in the cache module was fixed that lead to incorrect
   caching for the builtin proj-storage server. Caching was disabled due
   to this problem in the default configuration and is enabled now.
 * support for per-project caches (using the %l format) in e2.conf is
   no longer available. Cache is designed to be per user.
 * the global interface version is no longer maintained in the file
   .e2/version inside the project. Instead ./version on the server side
   remains the only permanent copy and it is fetched to .e2/global-version
   in the project environment
 * the local tools check for their own support for the global interface
   version in use.
 * a few minor bugs were fixed
 * code related to external tools was moved into the new tools module
 * a lot of effort was done to further modularize code
 * fix alignment of status messages for better readability
 * tool invocations are no longer logged

e2factory-2.3.3
 * use sha1 module instead of calling the sha1sum tool
 * optimization: use stat() instead of calling 'test -f'
 * rotate build logfiles