@@ -1,6 +1,7 @@
 NEXT:
  * a serious bug in the hashcache was fixed. The buildid calculation
    used outdated hash of files from the project tree.
+ * the username is included in the chroot environment path again
 
 e2factory-2.3.4pre3
  * the plugin interface was extended to allow plugins to change the
